[tool.poetry]
name = "covid-hackgov-server"
version = "0.1.0"
description = "Backend for covidhack.gov submission"
authors = ["Taxiarchis-Peter Gomesis", "Edward Pasenidis", "Anastasios Meletelidis"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.1"
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
