[tool.poetry]
name = "covid_hackgov_server"
version = "0.1.0"
description = "Backend for covidhack.gov submission"
authors = ["Taxiarchis-Peter Gomesis", "Edward Pasenidis", "Anastasios Meletelidis"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
logbook = "^1.5.3"
quart = "^0.11.5"
hypercorn = "^0.9.4"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.1"
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
