[tool.poetry]
name = "covid_hackgov_server"
version = "0.1.0"
description = "Backend for covidhack.gov submission"
authors = ["Taxiarchis-Petros Gomesis", "Edouardos Pasenidis", "Anastasios Meletlidis"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
logbook = "^1.5.3"
quart = "^0.11.5"
hypercorn = "^0.9.4"
itsdangerous = "^1.1.0"
cerberus = "^1.3.2"
aiohttp = "^3.6.2"
pandas = "^1.0.3"
asyncpg = "^0.20.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.1"
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
